--- a/Covid.ipynb
+++ b/Covid.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,17 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = r'C:\\Users\\fatec\\Desktop\\pandas\\EDA-Covid-2022-main\\HIST_PAINEL_COVIDBR_2020_Parte1_19set2022.csv'\n",
+    "filename = r'C:\\Users\\fatec\\Documents\\GitHub\\EDA-Covid-2022\\HIST_PAINEL_COVIDBR_2020_Parte1_19set2022.csv'\n",
     "df = pd.read_csv(filename, delimiter=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "(714481, 17)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,37 +104,17 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>590228</th>\n",
+       "      <th>654854</th>\n",
        "      <td>Sul</td>\n",
-       "      <td>SC</td>\n",
-       "      <td>Vargeão</td>\n",
-       "      <td>42</td>\n",
-       "      <td>421910.0</td>\n",
-       "      <td>42003.0</td>\n",
-       "      <td>XANXERE</td>\n",
-       "      <td>2020-06-15</td>\n",
-       "      <td>25</td>\n",
-       "      <td>3573.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>530662</th>\n",
-       "      <td>Sul</td>\n",
-       "      <td>PR</td>\n",
-       "      <td>Matelândia</td>\n",
-       "      <td>41</td>\n",
-       "      <td>411560.0</td>\n",
-       "      <td>41009.0</td>\n",
-       "      <td>9ª RS FOZ DO IGUACU</td>\n",
-       "      <td>2020-06-12</td>\n",
-       "      <td>24</td>\n",
-       "      <td>17943.0</td>\n",
+       "      <td>RS</td>\n",
+       "      <td>Xangri-lá</td>\n",
+       "      <td>43</td>\n",
+       "      <td>432380.0</td>\n",
+       "      <td>43004.0</td>\n",
+       "      <td>REGIAO 04</td>\n",
+       "      <td>2020-05-29</td>\n",
+       "      <td>22</td>\n",
+       "      <td>16408.0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -144,57 +124,77 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>161169</th>\n",
+       "      <th>682127</th>\n",
+       "      <td>Centro-Oeste</td>\n",
+       "      <td>MT</td>\n",
+       "      <td>Várzea Grande</td>\n",
+       "      <td>51</td>\n",
+       "      <td>510840.0</td>\n",
+       "      <td>51002.0</td>\n",
+       "      <td>BAIXADA CUIABANA</td>\n",
+       "      <td>2020-04-27</td>\n",
+       "      <td>18</td>\n",
+       "      <td>284971.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>548700</th>\n",
+       "      <td>Sul</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>São Sebastião da Amoreira</td>\n",
+       "      <td>41</td>\n",
+       "      <td>412600.0</td>\n",
+       "      <td>41018.0</td>\n",
+       "      <td>18ª RS CORNELIO PROCOPIO</td>\n",
+       "      <td>2020-06-16</td>\n",
+       "      <td>25</td>\n",
+       "      <td>8853.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>641746</th>\n",
+       "      <td>Sul</td>\n",
+       "      <td>RS</td>\n",
+       "      <td>São José do Inhacorá</td>\n",
+       "      <td>43</td>\n",
+       "      <td>431849.0</td>\n",
+       "      <td>43014.0</td>\n",
+       "      <td>REGIAO 14</td>\n",
+       "      <td>2020-05-02</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2073.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158753</th>\n",
        "      <td>Nordeste</td>\n",
        "      <td>RN</td>\n",
-       "      <td>Taipu</td>\n",
+       "      <td>São José do Campestre</td>\n",
        "      <td>24</td>\n",
-       "      <td>241390.0</td>\n",
-       "      <td>24003.0</td>\n",
-       "      <td>3ª REGIAO DE SAUDE - JOAO CAMARA</td>\n",
-       "      <td>2020-04-23</td>\n",
+       "      <td>241230.0</td>\n",
+       "      <td>24005.0</td>\n",
+       "      <td>5ª REGIAO DE SAUDE - SANTA CRUZ</td>\n",
+       "      <td>2020-04-20</td>\n",
        "      <td>17</td>\n",
-       "      <td>12279.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>210070</th>\n",
-       "      <td>Nordeste</td>\n",
-       "      <td>PE</td>\n",
-       "      <td>Santa Maria do Cambucá</td>\n",
-       "      <td>26</td>\n",
-       "      <td>261270.0</td>\n",
-       "      <td>26003.0</td>\n",
-       "      <td>CARUARU</td>\n",
-       "      <td>2020-04-29</td>\n",
-       "      <td>18</td>\n",
-       "      <td>14137.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>415171</th>\n",
-       "      <td>Sudeste</td>\n",
-       "      <td>RJ</td>\n",
-       "      <td>Miracema</td>\n",
-       "      <td>33</td>\n",
-       "      <td>330300.0</td>\n",
-       "      <td>33007.0</td>\n",
-       "      <td>NOROESTE</td>\n",
-       "      <td>2020-04-25</td>\n",
-       "      <td>17</td>\n",
-       "      <td>27174.0</td>\n",
+       "      <td>12856.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -208,43 +208,43 @@
        "</div>"
       ],
       "text/plain": [
-       "          regiao estado               municipio  coduf    codmun  \\\n",
-       "590228       Sul     SC                 Vargeão     42  421910.0   \n",
-       "530662       Sul     PR              Matelândia     41  411560.0   \n",
-       "161169  Nordeste     RN                   Taipu     24  241390.0   \n",
-       "210070  Nordeste     PE  Santa Maria do Cambucá     26  261270.0   \n",
-       "415171   Sudeste     RJ                Miracema     33  330300.0   \n",
+       "              regiao estado                  municipio  coduf    codmun  \\\n",
+       "654854           Sul     RS                  Xangri-lá     43  432380.0   \n",
+       "682127  Centro-Oeste     MT              Várzea Grande     51  510840.0   \n",
+       "548700           Sul     PR  São Sebastião da Amoreira     41  412600.0   \n",
+       "641746           Sul     RS       São José do Inhacorá     43  431849.0   \n",
+       "158753      Nordeste     RN      São José do Campestre     24  241230.0   \n",
        "\n",
-       "        codRegiaoSaude                   nomeRegiaoSaude        data  \\\n",
-       "590228         42003.0                           XANXERE  2020-06-15   \n",
-       "530662         41009.0               9ª RS FOZ DO IGUACU  2020-06-12   \n",
-       "161169         24003.0  3ª REGIAO DE SAUDE - JOAO CAMARA  2020-04-23   \n",
-       "210070         26003.0                           CARUARU  2020-04-29   \n",
-       "415171         33007.0                          NOROESTE  2020-04-25   \n",
+       "        codRegiaoSaude                  nomeRegiaoSaude        data  \\\n",
+       "654854         43004.0                        REGIAO 04  2020-05-29   \n",
+       "682127         51002.0                 BAIXADA CUIABANA  2020-04-27   \n",
+       "548700         41018.0         18ª RS CORNELIO PROCOPIO  2020-06-16   \n",
+       "641746         43014.0                        REGIAO 14  2020-05-02   \n",
+       "158753         24005.0  5ª REGIAO DE SAUDE - SANTA CRUZ  2020-04-20   \n",
        "\n",
        "        semanaEpi  populacaoTCU2019  casosAcumulado  casosNovos  \\\n",
-       "590228         25            3573.0               3           0   \n",
-       "530662         24           17943.0               2           0   \n",
-       "161169         17           12279.0               1           0   \n",
-       "210070         18           14137.0               1           0   \n",
-       "415171         17           27174.0               0           0   \n",
+       "654854         22           16408.0               2           0   \n",
+       "682127         18          284971.0              12           0   \n",
+       "548700         25            8853.0               2           2   \n",
+       "641746         18            2073.0               0           0   \n",
+       "158753         17           12856.0               0           0   \n",
        "\n",
        "        obitosAcumulado  obitosNovos  Recuperadosnovos  emAcompanhamentoNovos  \\\n",
-       "590228                0            0               NaN                    NaN   \n",
-       "530662                0            0               NaN                    NaN   \n",
-       "161169                1            0               NaN                    NaN   \n",
-       "210070                0            0               NaN                    NaN   \n",
-       "415171                0            0               NaN                    NaN   \n",
+       "654854                0            0               NaN                    NaN   \n",
+       "682127                0            0               NaN                    NaN   \n",
+       "548700                0            0               NaN                    NaN   \n",
+       "641746                0            0               NaN                    NaN   \n",
+       "158753                0            0               NaN                    NaN   \n",
        "\n",
        "        interior/metropolitana  \n",
-       "590228                     0.0  \n",
-       "530662                     0.0  \n",
-       "161169                     0.0  \n",
-       "210070                     0.0  \n",
-       "415171                     0.0  "
+       "654854                     0.0  \n",
+       "682127                     1.0  \n",
+       "548700                     0.0  \n",
+       "641746                     0.0  \n",
+       "158753                     0.0  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "<AxesSubplot:title={'center':'Óbitos por região'}, ylabel='Região'>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "<AxesSubplot:title={'center':'Óbitos por estado'}, ylabel='Estado'>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "<AxesSubplot:title={'center':'Municípios com mais óbitos'}, ylabel='Óbitos acumulados'>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "<AxesSubplot:title={'center':'São José dos Campos'}, xlabel='Data', ylabel='Número de casos novos'>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -392,7 +392,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.10.7 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -406,12 +406,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "634208e681b46bfb302eba2046a57ed18feef2b0dfecf045afa9e6ca229d4dcf"
+    "hash": "6553e3238298c34ed2456efebe735cdc70598c456d64919dc02c8c9f52a6e05e"
    }
   }
  },
